--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-dbsamples-0.1.tar.gz
-dbsamples-0.1/world/README
-dbsamples-0.1/world/world.sql
+world.sql
 .vagrant/machines/box1/virtualbox/action_provision
 .vagrant/machines/box1/virtualbox/action_set_name
 .vagrant/machines/box1/virtualbox/box_meta
@@ -20,4 +18,4 @@ dbsamples-0.1/world/world.sql
 .vagrant/machines/box2/virtualbox/synced_folders
 .vagrant/machines/box2/virtualbox/vagrant_cwd
 .vagrant/rgloader/loader.rb
-pg.dockerfile
+.gitignore
